vlib/v/checker/tests/array_decl_type_err.out
vlib/v/checker/tests/array_decl_type_err.vv:1:12: error: `array` is an internal type, it cannot be used directly. Use `[]int`, `[]Foo` etc
    1 | type Arr = array
      |            ~~~~~
    2 | type ArraySumType = array | int
    3 |
vlib/v/checker/tests/array_decl_type_err.vv:2:21: error: `array` is an internal type, it cannot be used directly. Use `[]int`, `[]Foo` etc
    1 | type Arr = array
    2 | type ArraySumType = array | int
      |                     ~~~~~
    3 |
    4 | interface Foo {
vlib/v/checker/tests/array_decl_type_err.vv:5:6: error: `array` is an internal type, it cannot be used directly. Use `[]int`, `[]Foo` etc
    3 |
    4 | interface Foo {
    5 |     arr array
      |         ~~~~~
    6 | }
    7 |
vlib/v/checker/tests/array_decl_type_err.vv:12:20: error: `array` is an internal type, it cannot be used directly. Use `[]int`, `[]Foo` etc
   10 |     max_size          string
   11 |     filter_until_hour int   = 240 // 10 days
   12 |     prune_list        array = ['all']
      |                       ~~~~~
   13 |     time_interval     int   = 300 // 5 min
   14 | }
vlib/v/checker/tests/array_decl_type_err.vv:16:10: error: `array` is an internal type, it cannot be used directly. Use `[]int`, `[]Foo` etc
   14 | }
   15 |
   16 | mut a := []array{}
      |          ~~~~~~~~
   17 | a.insert(4, '1')
